[package]
name = "set-genome"
version = "0.1.0"
authors = ["Silvan Buedenbender <silvancodes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", features = [ "small_rng" ] }
rand_distr = "0.2"
serde = { version = "1.0", features = ["derive"] }
config = "0.9"
favannat = { git = "https://github.com/SilvanCodes/favannat", tag = "thesis" }
