[package]
name = "set_genome"
version = "0.5.3"
authors = ["Silvan Buedenbender <silvancodes@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A genetic data structure for neuroevolution algorithms."
homepage = "https://github.com/SilvanCodes/set-genome"
documentation = "https://docs.rs/set_genome"
repository = "https://github.com/SilvanCodes/set-genome"
readme = "README.md"
keywords = ["ann", "evolution"]
categories = ["data-structures", "science", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = [ "small_rng" ] }
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
config = "0.11"
favannat = { version = "0.5.0", optional = true }
thiserror = "1.0.30"

[dev-dependencies]
criterion = "0.3"
nalgebra = "0.28.0"

[[bench]]
name = "bench_set_genome"
harness = false

[features]
default = ["favannat"]
